Добавленаоснова для форм

--- a/polls/templates/polls/test.html
+++ b/polls/templates/polls/test.html
@@ -2,9 +2,10 @@
 <h1>{{some}}</h1>
 <p>{{some_2}}</p>
 <form action="" method="post">{% csrf_token %}
-<input type="text" value="" name="inp" />
+<input type="text" value="" name="A" />
+<input type="text" value="" name="B" />
 <p>
-<input type="submit" value="Vote" />
+<input type="submit" value="Summ" />
 </p>
 </form>
 
