--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
 			  <li class="active"><a href="/">Главная</a></li>
 			  <li><a href="/news">Новости</a></li>
 			  <li><a href="/contact">Контакты</a></li>
-			  <li><a href="/schedule">Расписание</a></li>
+				<!--<li><a href="/schedule">Расписание</a></li>-->
 		<li><a href="/userlist">Участники</a></li>
 			  {% endblock %}
 		  {% block sections %}
