--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<!-- Le styles -->
 	<link href="{{ STATIC_URL }}assets/css/bootstrap.css" rel="stylesheet">
 	<style>
