--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
+  {{ form.media }}
+
 	<!-- Le styles -->
 	<link href="{{ STATIC_URL }}assets/css/bootstrap.css" rel="stylesheet">
 	<style>
