--- a/templates/base.html
+++ b/templates/base.html
@@ -60,12 +60,12 @@
 
 		  {% else %}
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              <i class="icon-user"></i> Регистрация
+              <i class="icon-user"></i> Вход
               <span class="caret"></span>
             </a>
 	    <ul class="dropdown-menu">
-	      <li><a href="{% url "registration_register" %}">Регистрация</a></li>
-	      <li class="divider"></li>
+				<!--<li><a href="{% url "registration_register" %}">Регистрация</a></li>-->
+				<!--<li class="divider"></li>-->
 	      <li><a href="{% url "auth_login" %}">Вход</a></li>
 	    </ul>
 	    {% endif %}
@@ -75,29 +75,8 @@
 			<ul class="nav">
 				{% block navigation %}
 			  <li class="active"><a href="/">Главная</a></li>
-			  <li><a href="/news">Новости</a></li>
-			  <li><a href="/contact">Контакты</a></li>
-				<!--<li><a href="/schedule">Расписание</a></li>-->
-		<li><a href="/userlist">Участники</a></li>
+        <li><a href="/admin">Администрирование</a></li>
 			  {% endblock %}
-		  {% block sections %}
-		<li class="dropdown">
-			<a href="#"
-			class="dropdown-toggle"
-			data-toggle="dropdown">
-				Секции
-			<b class="caret"></b>
-			</a>
-		<ul class="dropdown-menu">
-			{% for section in sections %}
-			<li>
-				<!--Сразу генерируем меню по секциям - в get запросе-->
-				<a href="/section/?id={{section.id}}">{{section}}</a>
-			</li>
-			{% endfor %}
-		</ul>
-		</li>
-		  {% endblock %}
 			</ul>
 		  </div><!--/.nav-collapse -->
 		</div>
@@ -127,31 +106,6 @@
 	<script src="{{ STATIC_URL }}assets/js/bootstrap-collapse.js"></script>
 	<script src="{{ STATIC_URL }}assets/js/bootstrap-carousel.js"></script>
 	<script src="{{ STATIC_URL }}assets/js/bootstrap-typeahead.js"></script>
-
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript">
-(function (d, w, c) {
-	(w[c] = w[c] || []).push(function() {
-		try {
-			w.yaCounter15536563 = new Ya.Metrika({id:15536563, enableAll: true, webvisor:true});
-		} catch(e) {}
-	});
-	
-	var n = d.getElementsByTagName("script")[0],
-		s = d.createElement("script"),
-		f = function () { n.parentNode.insertBefore(s, n); };
-	s.type = "text/javascript";
-	s.async = true;
-	s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-
-	if (w.opera == "[object Opera]") {
-		d.addEventListener("DOMContentLoaded", f);
-	} else { f(); }
-})(document, window, "yandex_metrika_callbacks");
-</script>
-<noscript><div><img src="//mc.yandex.ru/watch/15536563" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
-
 
   </body>
 </html>
