--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	<meta charset="utf-8">
-	<title>IvPy</title>
+	<title>VoteProject</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -44,7 +44,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </a>
-		  <a class="brand" href="/">IvPy</a>
+		  <a class="brand" href="/">VoteProject</a>
 	  {% block user_menu %}
 		  <div class="btn-group pull-right">
 		  {% if user.is_authenticated %}
@@ -55,7 +55,7 @@
 			<ul class="dropdown-menu">
 				<li><a href="/accounts/profile/">Профиль</a></li>
 				<li class="divider"></li>
-				<li><a href="{% url "auth_logout" %}">Выход</a></li>
+				<li><a href={% url 'logout' %}>Выход</a></li>
 			</ul>
 
 		  {% else %}
@@ -64,9 +64,7 @@
               <span class="caret"></span>
             </a>
 	    <ul class="dropdown-menu">
-				<!--<li><a href="{% url "registration_register" %}">Регистрация</a></li>-->
-				<!--<li class="divider"></li>-->
-	      <li><a href="{% url "auth_login" %}">Вход</a></li>
+        <li><a href={% url 'login' %}>Вход</a></li>
 	    </ul>
 	    {% endif %}
           </div>
