--- a/templates/polls/index.html
+++ b/templates/polls/index.html
@@ -1,3 +1,5 @@
+{% extends "content_template.html" %}
+{% block main_content %}
 {% if latest_poll_list %}
     <ul>
     {% for poll in latest_poll_list %}
@@ -7,3 +9,4 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+{% endblock %}
