--- a/templates/dokladedit.html
+++ b/templates/dokladedit.html
@@ -11,7 +11,7 @@
 			{% endfor %}
 
 			<a class="btn btn-large" href="#">Отменить</a>
-			<input type="submit" value="Сохранить изменения" / class="btn-large btn-primary">
+			<input type="submit" value="Создать занятие" / class="btn-large btn-primary">
 
 		</form>
 	{% endblock main_content %}
