--- a/templates/polls/detail.html
+++ b/templates/polls/detail.html
@@ -1,3 +1,5 @@
+{% extends "content_template.html" %}
+{% block main_content %}
 <h1>{{ poll.question }}</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
@@ -11,4 +13,4 @@
 {% endfor %}
 <input type="submit" value="Vote" />
 </form>
-
+{% endblock %}
