--- a/templates/polls/results.html
+++ b/templates/polls/results.html
@@ -1,3 +1,5 @@
+{% extends "content_template.html" %}
+{% block main_content %}
 <h1>{{ poll.question }}</h1>
 
 <ul>
@@ -7,4 +9,4 @@
 </ul>
 
 <a href="{% url 'detail' poll.id %}">Vote again?</a>
-
+{% endblock %}
