--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 {% if user.is_authenticated %}
 {{ user.username }} Вы же уже авторизорваны.
-Впрочем, всегда можно <a href="{% url auth_logout %}">выйти</a>.<br/><br/>
+Впрочем, всегда можно <a href="{% url 'auth_logout' %}">выйти</a>.<br/><br/>
 {% else %}
 
 {% if form.non_field_errors %}
@@ -29,9 +29,5 @@ document.getElementById('id_username').focus()
 </script>
 
  <br/><br/>
-<ul>
-    <!--<li><a href="{% url auth_password_reset %}">Забыли пароль?</a></li>-->
-    <li><a href="{% url registration_register %}">Регистрация</a></li>
-</ul>  
 {% endif %}
 {% endblock %}
